[gd_scene load_steps=3 format=3 uid="uid://b8k3m5n7q9r2t"]

[ext_resource type="Theme" uid="uid://c3y5j8k2l9m4p" path="res://scenes/minigames/password_cracker/PasswordCracker.tres" id="1_theme"]
[ext_resource type="Script" path="res://scenes/minigames/password_cracker/password_cracker.gd" id="2_script"]

[node name="PasswordCracker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.5, 1)
theme_override_font_sizes/font_size = 45
text = "üîê PASSWORD CRACKER"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "Descifra la contrase√±a usando las pistas disponibles"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="IntentosLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Intentos: 5/5"

[node name="BtnPista" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 22
text = "üí° Pista"

[node name="PistasContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_constants/separation = 8

[node name="InputContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/InputContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.5, 1)
theme_override_font_sizes/font_size = 26
placeholder_text = "Ingresa la contrase√±a..."
alignment = 1
secret = true
secret_character = "*"

[node name="BtnEnviar" type="Button" parent="Panel/VBoxContainer/InputContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "üîì ENVIAR"

[node name="ResultadoLabel" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 26
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/BtnPista" to="." method="_on_btn_pista_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/InputContainer/BtnEnviar" to="." method="_on_btn_enviar_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
